--- a/src/component/Product-page/Product-Styles/heroStyle.scss
+++ b/src/component/Product-page/Product-Styles/heroStyle.scss
@@ -215,6 +215,5 @@ button:hover {
     text-align: left;
   }
 
-  .heroImage {
-  }
+
 }
